# message_bridge_rs

./: .gitattributes  .gitignore  COPYING.md  CREDITS.md  Cargo.toml  HISTORY.md  LOCAL_WINDOWS_10.md  README.md  RELEASE-NOTES-0.1.md  RELEASE-NOTES-1.0.md  SECURITY.md  bridge-cmd.drawio  bridge-design.drawio  config.simple.json  mde.js  package-lock.json  package.json  server.ts  tsconfig.json
.github/workflows/: main.yml  rust.yml
docs/discord/: set_discord_channel_webhook.md
examples/axum_run_bot/: Cargo.toml
examples/axum_run_bot/src/: main.rs
examples/sqlite_config/: Cargo.toml
examples/sqlite_config/src/: main.rs
examples/sqlite_config/src/store/: mod.rs
mirai_rs/: Cargo.toml
mirai_rs/src/: lib.rs  message.rs  mirai_http.rs  response.rs
mirai_rs/src/adapter/: http_adapter.rs  mod.rs
mirai_rs/src/model/: group.rs  mod.rs
src/: bridge.rs  bridge_cmd.rs  bridge_data.rs  bridge_dc.rs  bridge_log.rs  bridge_message_history.rs  bridge_qq.rs  bridge_qq_for_ricq.rs  cmd_adapter.rs  config.rs  logger.rs  main.rs  test_dc.rs  test_mirai.rs  test_regex.rs  test_reqwest.rs  utils.rs
src/bridge/: bridge_message.rs  bridge_message_manager.rs  config.rs  mod.rs  user.rs  user_manager.rs  user_ref_manager.rs
src/bridge/command/: handler.rs  mod.rs
src/bridge/manager/: message_manager.rs  mod.rs  user_manager.rs
src/bridge/pojo/: mod.rs
src/bridge/pojo/form/: bridge_message_ref_message_form.rs  bridge_message_save_and_ref_form.rs  bridge_message_save_form.rs  bridge_send_message_form.rs  bridge_user_save_form.rs  mod.rs
src/bridge/pojo/po/: bridge_message_po.rs  bridge_user_ref_po.rs  mod.rs
src/bridge_cmd/: bridge_client.rs  bridge_cmd.rs  default_process.rs  mod.rs
src/bridge_cmd/process/: bind_proc.rs  mod.rs  token.rs
src/bridge_dc/: bridge_client.rs  handler.rs  mod.rs
src/bridge_qq/: group_message_id.rs  handler.rs  mod.rs
src/bridge_tg/: mod.rs
