[package]
name = "message_bridge_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

mirai_rs = { path = "./mirai_rs" }
[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.11.5"

[dev-dependencies]
tokio-test = "*"

[workspace]
members = [ "mirai_rs" ]