[package]
name = "message_bridge_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.22"

mirai_rs = { path = "./mirai_rs" }

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.11.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
tokio-test = "*"

[workspace]
members = [ "mirai_rs" ]
