[package]
name = "message_bridge_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.14"
tracing = "0.1.36"
color-eyre = "0.6.2"
tracing-error = "0.2.0"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.15", features = [
    "env-filter",
    "local-time",
    "time",
] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.22"
regex = "1.6.0"
mime = "0.3.16"
mime_guess = "2.0.4"
md5 = "0.7.0"
image-base64 = "0.1.0"
js-sandbox = "0.1.6"

mirai_rs = { path = "./mirai_rs" }

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
version = "0.11.5"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.url]
version = "^2.1"
features = ["serde"]

[dev-dependencies]
tokio-test = "*"

[workspace]
members = [ "mirai_rs" ]
