[package]
name = "mirai_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.14.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.async-trait]
version = "0.1.9"